--- a/quiz1framepro/quiz1framepro/Views/Home/Collaboration.cshtml
+++ b/quiz1framepro/quiz1framepro/Views/Home/Collaboration.cshtml
@@ -6,8 +6,8 @@
 <section class="page-section" id="collaboration">
     <div class="container">
         <div class="text-center">
-            <h1 class="section-heading text-uppercase">Product</h1>
-            <h3 class="section-subheading text-muted">Product of our Company</h3>
+            <h1 class="section-heading text-uppercase">Collaboration</h1>
+            <h3 class="section-subheading text-muted">Trusted By</h3>
         </div>
         <div class="row gx-4 gx-lg-5">
             <div class="col-lg-3 col-md-6 text-center">
