--- a/quiz1framepro/quiz1framepro/Views/Home/Product.cshtml
+++ b/quiz1framepro/quiz1framepro/Views/Home/Product.cshtml
@@ -7,7 +7,7 @@
     <div class="container">
         <div class="text-center">
             <h1 class="section-heading text-uppercase">Product</h1>
-            <h3 class="section-subheading text-muted">Product of our Company</h3>
+            <h3 class="section-subheading text-muted">Product of Our Company</h3>
         </div>
         <div class="row">
             <!-- item 1-->
