--- a/quiz1framepro/quiz1framepro/Views/Home/Profile.cshtml
+++ b/quiz1framepro/quiz1framepro/Views/Home/Profile.cshtml
@@ -6,7 +6,7 @@
     <div class="container">
         <div class="text-center">
             <h1 class="section-heading text-uppercase">Profile</h1>
-            <h3 class="section-subheading text-muted">Profile of our Company</h3>
+            <h3 class="section-subheading text-muted">Profile of Our Company</h3>
         </div>
         <div class="row mt-5">
             <div class="ket col-lg-3 col-md-6">
